--- a/menu.html
+++ b/menu.html
@@ -472,9 +472,9 @@
 
                 <!-- Vegetables -->
                 <div class="menuSections"> <!--exp ng-star-inserted -->
-                    <div id="appetizers"> <!--appetizers-->
+                    <div id="Vegetables"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
-                            <h3>Appetizers</h3>
+                            <h3>Vegetables</h3>
                             <div class="png"> <!--png-->
                                 <img src="assets/imgs/chevron-double-down.svg" alt="">
                             </div>
@@ -485,65 +485,110 @@
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
-                                    <img src="assets/imgs/chicken65.jpg" alt="">
+                                    <img src="assets/imgs/sambar.jpeg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chicken 65</h3>
-                                    <p><span>$11.99</span></p>
+                                    <h3>Sambar</h3>
+                                    <p><span>$6.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/Kerala chicken fry.jpg" alt="">
+                                    <img src="/assets/imgs/Ayiyal.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Kerala Chicken Fry</h3>
-                                    <p><span>$11.99</span></p>
+                                    <h3>Aviyal</h3>
+                                    <p><span>$6.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/chilliChicken.jpeg" alt="">
+                                    <img src="/assets/imgs/a2b5fe31-f4cd-4590-8b94-4918a33076e2_logo.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chili Chicken Dry</h3>
-                                    <p><span>$11.99</span></p>
+                                    <h3>Thoran (Of the day)</h3>
+                                    <p><span>$6.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/Gobi_Manchurian.jpg" alt="">
+                                    <img src="/assets/imgs/mezhukkupuratti.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Gobi Manchurian</h3>
-                                    <p><span>$10.99</span></p>
+                                    <h3>Mezhukkupuratti</h3>
+                                    <p><span>$7.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/chickenManchurian.jpg" alt="">
+                                    <img src="/assets/imgs/theeyal.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chicken Manchurian</h3>
-                                    <p><span>$10.99</span></p>
+                                    <h3>Theeyal</h3>
+                                    <p><span>$5.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/chicken-pakora-8.jpg" alt="">
+                                    <img src="/assets/imgs/moru-curry.webp" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chicken Pakora</h3>
-                                    <p><span>$10.99</span></p>
+                                    <h3>Moru</h3>
+                                    <p><span>$6.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="assets/imgs/beefDryFry.jpg" alt="">
+                                    <img src="assets/imgs/Pachadi.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Beef Dry Fry (BDF)</h3>
-                                    <p><span>$16.99</span></p>
+                                    <h3>Pachadi</h3>
+                                    <p><span>$6.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo">
+                                    <img src="assets/imgs/kappa.jpg" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Kappa (Tapioca)</h3>
+                                    <p><span>$7.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo">
+                                    <img src="assets/imgs/chakka.jpg" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Chakka (Jackfruit)</h3>
+                                    <p><span>$6.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo">
+                                    <img src="assets/imgs/Veg-Kurma-500x500.webp" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Veg. Kuruma</h3>
+                                    <p><span>$7.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo">
+                                    <img src="assets/imgs/vegetable-curry.jpg" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Mix Veg. Curry</h3>
+                                    <p><span>$7.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo">
+                                    <img src="assets/imgs/matar-paneer-recipe6.webp" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Paneer Mutter</h3>
+                                    <p><span>$8.99</span></p>
                                 </div>
                             </div>
                         </div>
