added imgs for indoChinese section

--- a/menu.html
+++ b/menu.html
@@ -597,9 +597,9 @@
 
                 <!-- Indo Chinese -->
                 <div class="menuSections"> <!--exp ng-star-inserted -->
-                    <div id="appetizers"> <!--appetizers-->
+                    <div id="indoChinese"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
-                            <h3>Appetizers</h3>
+                            <h3>Indo Chinese</h3>
                             <div class="png"> <!--png-->
                                 <img src="assets/imgs/chevron-double-down.svg" alt="">
                             </div>
@@ -610,65 +610,65 @@
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
-                                    <img src="assets/imgs/chicken65.jpg" alt="">
+                                    <img src="assets/imgs/chilliChicken.jpeg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chicken 65</h3>
+                                    <h3>Chili Chicken</h3>
                                     <p><span>$11.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/Kerala chicken fry.jpg" alt="">
+                                    <img src="/assets/imgs/chiliBeef.jpeg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Kerala Chicken Fry</h3>
-                                    <p><span>$11.99</span></p>
+                                    <h3>Chili Beef</h3>
+                                    <p><span>$13.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/chilliChicken.jpeg" alt="">
+                                    <img src="/assets/imgs/chili-garlic-shrimp-18.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chili Chicken Dry</h3>
-                                    <p><span>$11.99</span></p>
+                                    <h3>Chili Shrimp</h3>
+                                    <p><span>$12.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/Gobi_Manchurian.jpg" alt="">
+                                    <img src="/assets/imgs/Chilli-Fish.jpg" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Chili Fish</h3>
+                                    <p><span>$10.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo">
+                                    <img src="/assets/imgs/Chilli-Paneer.jpg" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Chili Paneer</h3>
+                                    <p><span>$9.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo">
+                                    <img src="/assets/imgs/ChilliGobi.jpg" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Chili Gobi</h3>
+                                    <p><span>$9.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo">
+                                    <img src="assets/imgs/Gobi_Manchurian.jpg" alt="">
                                 </div>
                                 <div class="content">
                                     <h3>Gobi Manchurian</h3>
                                     <p><span>$10.99</span></p>
-                                </div>
-                            </div>
-                            <div class="main-container">
-                                <div class="logo">
-                                    <img src="/assets/imgs/chickenManchurian.jpg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3>Chicken Manchurian</h3>
-                                    <p><span>$10.99</span></p>
-                                </div>
-                            </div>
-                            <div class="main-container">
-                                <div class="logo">
-                                    <img src="/assets/imgs/chicken-pakora-8.jpg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3>Chicken Pakora</h3>
-                                    <p><span>$10.99</span></p>
-                                </div>
-                            </div>
-                            <div class="main-container">
-                                <div class="logo">
-                                    <img src="assets/imgs/beefDryFry.jpg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3>Beef Dry Fry (BDF)</h3>
-                                    <p><span>$16.99</span></p>
                                 </div>
                             </div>
                         </div>
