added imgs and .comboP to combos section

--- a/menu.html
+++ b/menu.html
@@ -677,9 +677,9 @@
 
                 <!-- Combo -->
                 <div class="menuSections"> <!--exp ng-star-inserted -->
-                    <div id="appetizers"> <!--appetizers-->
+                    <div id="combo"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
-                            <h3>Appetizers</h3>
+                            <h3>Combos</h3>
                             <div class="png"> <!--png-->
                                 <img src="assets/imgs/chevron-double-down.svg" alt="">
                             </div>
@@ -690,65 +690,42 @@
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
-                                    <img src="assets/imgs/chicken65.jpg" alt="">
+                                    <img src="assets/imgs/southIndianThali.webp" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chicken 65</h3>
-                                    <p><span>$11.99</span></p>
+                                    <h3>South Indian Thali</h3>
+                                    <p class="comboP">Rice, Sambar/Moru, Aviyal, Thoran, Beef/Chicken, Fish Curry, Chutney, Pickle, Pappadom, Payasam.</p>
+                                    <p><span>$13.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/Kerala chicken fry.jpg" alt="">
+                                    <img src="/assets/imgs/vegThali.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Kerala Chicken Fry</h3>
-                                    <p><span>$11.99</span></p>
-                                </div>
-                            </div>
-                            <div class="main-container">
-                                <div class="logo">
-                                    <img src="/assets/imgs/chilliChicken.jpeg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3>Chili Chicken Dry</h3>
-                                    <p><span>$11.99</span></p>
-                                </div>
-                            </div>
-                            <div class="main-container">
-                                <div class="logo">
-                                    <img src="/assets/imgs/Gobi_Manchurian.jpg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3>Gobi Manchurian</h3>
+                                    <h3>Veg Meals</h3>
+                                    <p class="comboP">Rice, Chapathi/Naan, 3 veg Curries, Raitha Pickle, Pappadom, Payasam.</p>
                                     <p><span>$10.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/chickenManchurian.jpg" alt="">
+                                    <img src="/assets/imgs/non-vegetarian-thali-5-jpg.webp" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chicken Manchurian</h3>
-                                    <p><span>$10.99</span></p>
+                                    <h3>Non Veg Meals</h3>
+                                    <p class="comboP">Rice, Naan/Chapathi, Chicken 65, Chicken Curry, Mutton Curry, Fish Curry, Veg Curry, Sambar, Aviyal, Thoran, Chutney, Pappadom, Payasam.</p>
+                                    <p><span>$17.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/chicken-pakora-8.jpg" alt="">
+                                    <img src="/assets/imgs/northIndianThali.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chicken Pakora</h3>
-                                    <p><span>$10.99</span></p>
-                                </div>
-                            </div>
-                            <div class="main-container">
-                                <div class="logo">
-                                    <img src="assets/imgs/beefDryFry.jpg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3>Beef Dry Fry (BDF)</h3>
-                                    <p><span>$16.99</span></p>
+                                    <h3>North Indian Thali</h3>
+                                    <p class="comboP">Naan/Chapathi, White Rice, Butter Chicken, Chicken 65, Mutton Curry, Daal/Veg Kuruma, Raitha, Pickle, Pappadom, Dessert</p>
+                                    <p><span>$14.99</span></p>
                                 </div>
                             </div>
                         </div>
