added images for specialCombo section

--- a/menu.html
+++ b/menu.html
@@ -734,9 +734,9 @@
 
                 <!-- Special Combos -->
                 <div class="menuSections"> <!--exp ng-star-inserted -->
-                    <div id="appetizers"> <!--appetizers-->
+                    <div id="specialCombos"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
-                            <h3>Appetizers</h3>
+                            <h3>Special Combos</h3>
                             <div class="png"> <!--png-->
                                 <img src="assets/imgs/chevron-double-down.svg" alt="">
                             </div>
@@ -747,65 +747,39 @@
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
-                                    <img src="assets/imgs/chicken65.jpg" alt="">
+                                    <img src="assets/imgs/porottaCurry.webp" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chicken 65</h3>
-                                    <p><span>$11.99</span></p>
+                                    <h3>Porotta, Curry, Dessert, Salad</h3>
+                                    <p class="comboP">(Chicken/Mutton/Beef/Fish)</p>
+                                    <p><span>$12.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/Kerala chicken fry.jpg" alt="">
+                                    <img src="/assets/imgs/appamCurry.webp" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Kerala Chicken Fry</h3>
-                                    <p><span>$11.99</span></p>
-                                </div>
-                            </div>
-                            <div class="main-container">
-                                <div class="logo">
-                                    <img src="/assets/imgs/chilliChicken.jpeg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3>Chili Chicken Dry</h3>
-                                    <p><span>$11.99</span></p>
-                                </div>
-                            </div>
-                            <div class="main-container">
-                                <div class="logo">
-                                    <img src="/assets/imgs/Gobi_Manchurian.jpg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3>Gobi Manchurian</h3>
+                                    <h3>Appam, Curry/Stew, Dessert</h3>
                                     <p><span>$10.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/chickenManchurian.jpg" alt="">
+                                    <img src="/assets/imgs/palappamCurry.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chicken Manchurian</h3>
+                                    <h3>Palappam, Curry/Stew, Dessert</h3>
                                     <p><span>$10.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/chicken-pakora-8.jpg" alt="">
+                                    <img src="/assets/imgs/kappa meen curry.JPG" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chicken Pakora</h3>
+                                    <h3>Kappa, Curry, Chutney</h3>
                                     <p><span>$10.99</span></p>
-                                </div>
-                            </div>
-                            <div class="main-container">
-                                <div class="logo">
-                                    <img src="assets/imgs/beefDryFry.jpg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3>Beef Dry Fry (BDF)</h3>
-                                    <p><span>$16.99</span></p>
                                 </div>
                             </div>
                         </div>
