updated imgs for rice and noodles section

--- a/menu.html
+++ b/menu.html
@@ -912,9 +912,9 @@
 
                 <!-- Rice & Noodles -->
                 <div class="menuSections"> <!--exp ng-star-inserted -->
-                    <div id="appetizers"> <!--appetizers-->
+                    <div id="riceAndNoodles"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
-                            <h3>Appetizers</h3>
+                            <h3>Rice And Noodles</h3>
                             <div class="png"> <!--png-->
                                 <img src="assets/imgs/chevron-double-down.svg" alt="">
                             </div>
@@ -925,65 +925,110 @@
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
-                                    <img src="assets/imgs/chicken65.jpg" alt="">
+                                    <img src="assets/imgs/eggFriedRice.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chicken 65</h3>
-                                    <p><span>$11.99</span></p>
+                                    <h3>Egg Fried Rice</h3>
+                                    <p><span>$7.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/Kerala chicken fry.jpg" alt="">
+                                    <img src="/assets/imgs/Vegetable-Fried-Rice-2-3.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Kerala Chicken Fry</h3>
-                                    <p><span>$11.99</span></p>
+                                    <h3>Veg Fried Rice</h3>
+                                    <p><span>$6.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/chilliChicken.jpeg" alt="">
+                                    <img src="/assets/imgs/chickenFriedRice.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chili Chicken Dry</h3>
-                                    <p><span>$11.99</span></p>
+                                    <h3>Chicken Fried Rice</h3>
+                                    <p><span>$8.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/Gobi_Manchurian.jpg" alt="">
+                                    <img src="/assets/imgs/mixed-fried-rice-recipe-1-4.webp" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Gobi Manchurian</h3>
+                                    <h3>Mix Fried Rice</h3>
                                     <p><span>$10.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/chickenManchurian.jpg" alt="">
+                                    <img src="/assets/imgs/vegetable pulao.JPG" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chicken Manchurian</h3>
-                                    <p><span>$10.99</span></p>
+                                    <h3>Veg Pulav Rice</h3>
+                                    <p><span>$6.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/chicken-pakora-8.jpg" alt="">
+                                    <img src="/assets/imgs/gheeRice.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chicken Pakora</h3>
-                                    <p><span>$10.99</span></p>
+                                    <h3>Ghee Rice</h3>
+                                    <p><span>$4.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="assets/imgs/beefDryFry.jpg" alt="">
+                                    <img src="assets/imgs/kerala-matta-rice.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Beef Dry Fry (BDF)</h3>
-                                    <p><span>$16.99</span></p>
+                                    <h3>Kerala Rice</h3>
+                                    <p><span>$2.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo"> <!--logo-->
+                                    <img src="assets/imgs/basmati-rice-recipe-500x500.jpg" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>White Rice (Basmathi)</h3>
+                                    <p><span>$2.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo"> <!--logo-->
+                                    <img src="assets/imgs/Egg-and-vegetable-noodles21.jpg" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Egg and Veg. Noodles</h3>
+                                    <p><span>$8.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo"> <!--logo-->
+                                    <img src="assets/imgs/chicken-noodles-500x447.jpg" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Chicken Noodles</h3>
+                                    <p><span>$9.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo"> <!--logo-->
+                                    <img src="assets/imgs/mixNoodles.jpg" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Mix Noodles</h3>
+                                    <p><span>$12.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo"> <!--logo-->
+                                    <img src="assets/imgs/Kothuparotta8.jpg" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Kothu Porotta</h3>
+                                    <p><span>$8.99</span></p>
                                 </div>
                             </div>
                         </div>
